--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
-before_script:
-  - npm install
+node_js:
+  - "10"  
 notifications:
   email:
     on_success: never # default: change
