--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\nodeJsCalcPointsApp.js"
+            "program": "${workspaceFolder}\\src\\nodeJsCalcPointsApp.js"
         }
     ]
 }
